daily: 6 video dissections, v3 redesign spec, Manim prototype started

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -216,6 +216,53 @@ Integrated ALL research into one actionable document:
 | Competitor analysis | ❌ not done at video level |
 | Launch strategy | ✅ synthesized in playbook |
 
+## Autopilot 0009 continued — Deep Learning from Concrete Instances
+
+### Video Dissections Completed
+Downloaded, transcribed, and frame-analyzed **6 videos** across 2 topics:
+
+**Monty Hall Problem (3 videos)**:
+- Numberphile (Lisa Goldberg, 5:30) — paper+pen, 100-door scaling
+- AsapSCIENCE (2:42) — whiteboard, card deck analogy
+- Ronnie大叔 (5:24) — Chinese, "1 door vs 2 doors" reframing
+
+**Context Windows / AI Memory (3 videos)**:
+- NetworkChuck (15:18) — live demo, GPU dying on camera
+- IBM Technology (11:31) — lightboard, BLAH-box overflow diagram
+- Mr. Hau 阿豪 (4:05) — Chinese, Whimsical block compression diagram
+
+### Key Finding: Form = Content, Not Decoration
+Across ALL 6 videos, the best visuals **directly represent the concept**:
+- 100 doors on screen → you SEE 1/100 probability
+- Cards flipping over → you SEE probability concentrating
+- BLAH blocks outside a box → you SEE context overflow
+- 8K block shrinking to 2K → you SEE compression
+
+None of these creators used "storytelling frameworks." They asked: "What does the viewer need to SEE right now?"
+
+### How I Forget v3 Redesign
+Wrote complete spec at `specs/how-i-forget/redesign-v3.md`:
+- Container = context window (fixed size rectangle)
+- Colored blocks = messages (size = token count)
+- Blocks physically shrink = compression (text visibly simplified)
+- Ghost effect = original fading behind summary
+- Parallel container for viewer's memory (philosophical payoff)
+
+Started Manim prototype (`tools/manim/how-i-forget-v3.py`) — 3 scenes, NOT YET RENDERED.
+
+### Tools Built / Validated
+- yt-dlp works for YouTube download (video + audio)
+- faster-whisper transcription pipeline works (tiny model for long videos)
+- Frame extraction via ffmpeg at configurable intervals
+- Full download → transcribe → frame-extract → analysis workflow operational
+
+### Next Steps (for continuation)
+1. Render how-i-forget-v3.py scenes, verify visual quality
+2. Iterate on compression visual (ghost text effect, block merging)
+3. Add scenes 4-6 (loss detail, rebuild from summaries, viewer parallel)
+4. Generate TTS narration aligned to scene durations
+5. Assemble in Remotion (ManimExplainer composition pattern)
+
 ## Ren Feedback Session (afternoon)
 
 ### Core Critique: Form for Form's Sake
