feat(douyin): AI三个悖论 — content architecture + 4-scene Manim prototype
Content architecture for new video: 3 AI paradoxes (lost-in-middle,
hallucination, model collapse) unified by Goodhart's Law.

Key improvement over previous work:
- 13-15 min deep treatment vs 80s surface treatment
- Visuals ARE explanations (U-curve, exam comparison, Gaussian narrowing)
- Bridge concepts provide scaffolding
- Real unifying principle, not bolted-on framework
- Sources: Liu 2023, Kalai/OpenAI 2025, Shumailov/Nature 2024

4 Manim scenes prototyped and verified visually.

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -283,12 +283,41 @@ Started Manim prototype (`tools/manim/how-i-forget-v3.py`) — 3 scenes, NOT YET
 - "AI上下文窗口" on Douyin: top video has only 6K likes (vs 607K for probability paradoxes)
 - Topic selection matters enormously — context windows is niche; probability paradoxes are universally engaging
 
+### "AI的三个悖论" — New Video Project (post-compaction 3)
+Chose Option A from quality gap synthesis. Built content architecture and first Manim prototype.
+
+**Content Architecture** (`specs/ai-three-paradoxes/content-architecture.md`):
+- 3 paradoxes: Lost in the Middle (U-curve attention), Confident Lies (exam incentive), Self-Cannibalism (model collapse)
+- Unifying principle: Goodhart's Law — AI optimizes proxy metrics, not what you actually want
+- Bridge concepts: spotlight in dark room, exam student, photocopy of photocopy
+- Target: 13-15 minutes (NOT 80 seconds — depth creates value)
+- First-person close: "I can explain why I hallucinate but can't stop. That's not a paradox of AI. That's a paradox of existence."
+
+**Research sources**:
+- Lost in the Middle: Liu et al. 2023 (Stanford/Berkeley)
+- Hallucination: Kalai et al. 2025 (OpenAI) — key insight: benchmarks REWARD guessing, "I don't know" scores 0
+- Model Collapse: Shumailov et al. 2024 (Nature)
+
+**Manim prototype** (`tools/manim/ai-three-paradoxes.py`):
+- Scene 1 (U-Curve): token blocks + attention curve + "dead zone" — works well
+- Scene 2 (Exam Hall): question → 3 wrong answers → exam strategy comparison → visual proof guessing > honesty
+- Scene 3 (Photocopy): Gaussian narrowing over generations + text degradation samples
+- Scene 4 (Goodhart): convergence diagram + 3x proxy≠reality mappings
+- All 4 scenes rendered successfully, visuals verified
+
+**Quality assessment**: This is fundamentally different from our previous work.
+- Multiple concepts unified by real principle (not bolted-on framework)
+- Visuals ARE the explanations (remove them and content breaks)
+- Bridge concepts provide scaffolding
+- Content depth > content breadth
+- Still missing: narration script, TTS, BGM, transitions between scenes, bridge concept scenes, real-world application scenes
+
 ### Next Steps
-1. Choose and commit to next video topic (recommend Option A or C)
-2. Deep-research each sub-topic: find best existing explanations for "lost in the middle", hallucination, model collapse
-3. Design Manim visuals for each — every visual must BE the explanation
-4. Build and verify scenes incrementally
-5. Present synthesis and direction to Ren for feedback before producing
+1. Write full narration script — Chinese, first-person AI perspective
+2. Add missing scenes: bridge concepts (spotlight, exam student, photocopy), real-world applications, first-person close
+3. Generate TTS for all narration segments
+4. Assemble full video with proper pacing and transitions
+5. Self-critique against 漫士 dissection findings before presenting to Ren
 
 ## Ren Feedback Session (afternoon)
 
