daily: data mining insights — duration analysis, competitive validation, niche gap

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -482,3 +482,14 @@ Demoted 6 completed research notes from priority:high. Context restore now ~22K 
 8. `a1fdf129` — How I Forget v4 content-first script (5min, 7 phases, real code numbers)
 9. `824d34c3` — 3 new Manim scenes (CompactionCut, LossComparison, NestedCompression)
 10. `1ceb8307` — Updated REVIEW-START-HERE for Ren with 4 decision points
+11. `d49d72e6` — AIGC labeling rules (mandatory since Sep 2025, must comply)
+12. `df2db98a` — Daily note update
+13. `cc79167a` — Engagement by duration analysis from our own data (longer is better)
+
+### Data Mining Insights (post-compaction 7)
+Analyzed 911 tracked Douyin works from lamarck.db:
+- 10min+ videos: HIGHEST avg likes (16.4K) and share rate (15.9%)
+- <1min videos: WORST on every metric
+- Validates abandoning 80s format, supports 5-12min targets
+- "为啥所有AI都数不清手指" (150K likes, 7min) uses exact same structure as our "What I Can't Do" concept: testable demo → AI failure → technical explanation. Competitive validation.
+- Top Douyin content is tool tutorials ("how to use Cursor"), NOT mechanism explanations. Our niche is genuinely underserved.
