daily: pre-compaction 9 — hallucination demo testing, models better at refusal in 2026

--- a/lamarck/vault/Daily/2026-02-17.md
+++ b/lamarck/vault/Daily/2026-02-17.md
@@ -504,4 +504,16 @@ Dimensions covered this session: pi internals, content architecture, visual prot
 3. **Voice AI pipeline research for debt-call-shield** — Pipecat framework (open source Python, 10.2K GitHub stars) recommended. Modular STT→LLM→TTS pipeline with Twilio integration out of the box. ~$0.02/min total cost.
 4. **Competitor analysis**: AI有点聊 leads share rate (41%) with anxiety/urgency style — opposite of our genre.
 
-Commits: 4adf2769, c8883532
+Commits: 4adf2769, c8883532, ae7c62ad, 9845c045, e0c5ced1
+
+### Hallucination Demo Testing (post-compaction 8 continued)
+Tested hallucination demos against Gemini Flash + Claude Sonnet:
+- Beethoven's 10th: CAUGHT by both models. Skip.
+- Shakespeare's 40th: Gemini hedges then answers "亨利八世". Weak.
+- Einstein 1923 quantum entanglement: BEST — generates detailed fabricated academic content about nonexistent paper. The term wasn't coined until 1935.
+- TCP/IP 8th layer: CAUGHT. Models refuse on well-known technical facts.
+- DNA 3rd strand: CAUGHT.
+- **Key insight**: Models in Feb 2026 are much better at refusing false premises than expected. Only sufficiently obscure/academic false premises trigger hallucination. The Einstein demo works because it mixes real entities (Einstein, quantum entanglement, EPR) with fabricated specifics (1923 date, "third paper").
+
+### State at Compaction 9
+This session: 7 commits across 5 dimensions (competitor dissection, content spec, voice AI research, strategic insight, demo verification). No loops. All Douyin content work remains blocked on Ren. Next session: explore completely non-Douyin territory (pi codebase, understand publication, or new project).
